<resources>
    <string name="app_name">Lock</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="reset_lock">重设声音锁</string>
    <string name="try_unlock">尝试解锁</string>
    <string name="cancel">取消</string>
    <string name="record_hints">请按住按钮，贴近手机下方话筒，匀速读出数字</string>
    <string name="push_speak">按住说话</string>
    <string name="next">下一步</string>
    <string name="next_hint">已完成第一步，请继续</string>
    <string name="processing">正在处理...</string>
    <string name="recording">正在录音...</string>
    <string name="confirm">确定</string>
    <string name="no_speech">没有检测到语音...</string>
    <string name="not_the_same">与第一次录制声音不一致，请重新录制</string>
    <string name="set_complete">已完成声音锁的设置</string>
    <string name="unlock_hints">需要验证你的声音，请读出下面的数字</string>
    <string name="set_lock">设置声音锁</string>
    <string name="unlock_fail">无法识别</string>
    <string name="unlock_sucess">成功解锁</string>

</resources>
